# MKS

./: .gitignore  Data_time.txt  Makefile  README.md  gipercam59_1.py  orbitca_photo_2.txt  pyproject.toml  sub_satellite_diff.kml  target.kml  test.py  test_giper.py  test_shot.py
.github/workflows/: run_ci.yml
mks/core/: __init__.py  core.py  interface.py  kml.py  parser.py
mks/models/: __init__.py  cam.py  mount.py  station.py
mks/types/: __init__.py  core_types.py
mks/utils/: __init__.py  math.py
