[project]
name = "mks"
version = "0.1.0"
description = ""
authors = [
    {name = "Olezhich"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "simplekml (>=1.3.6,<2.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "pyqtwebengine (>=5.15.7,<6.0.0)",
    "pandas (>=3.0.5,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.20"
mypy = "^2.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
